Le vrai fix des headings de singapour

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -416,89 +416,3 @@ html {
     }
   }
 }
-
-/* SINGAPOUR */
-
-@font-face {
-  font-family: "pix";
-  src: url("../assets/fonts/singapour/pixM8pt.ttf");
-}
-@font-face {
-  font-family: "w9";
-  src: url("../assets/fonts/singapour/W95FA.otf");
-}
-
-.singapour {
-  padding: 5rem 33px;
-  position: relative;
-
-  &__modal {
-    background-color: #fafafa;
-    z-index: 5;
-  }
-
-  &__navbar {
-    display: flex;
-    background-color: #000080;
-    padding: 3px;
-    height: 25px;
-    border: 2px solid #c0c0c0;
-  }
-  &__txt {
-    font-family: "w9";
-
-    &--bottom {
-      padding-bottom: 74px;
-    }
-
-    &--nav {
-      font-size: 20px;
-      color: #fafafa;
-      line-height: 0%;
-      margin-top: 12px;
-    }
-  }
-  &_notepad {
-    width: 20px;
-    height: 20px;
-    margin-top: 0px;
-  }
-  &__icons {
-    width: 145px;
-    display: flex;
-    justify-content: space-around;
-    margin-left: 25%;
-  }
-  &__icon {
-    margin-top: 3px;
-    width: 20px;
-    height: 20px;
-  }
-  &__content {
-    max-width: 94%;
-    margin: auto 3%;
-  }
-  &__title {
-    font-family: "MS-Sans-Serif-8pt-Bold";
-    font-size: 33px;
-    margin-top: 54px;
-    margin-bottom: 33px;
-  }
-  &__h3 {
-    font-size: 24px;
-    margin-top: 54px;
-    font-family: "MS-Sans-Serif-8pt-Bold";
-    line-height: 1.2;
-  }
-  &__folder {
-    position: absolute;
-    top: 50%;
-    left: 40%;
-    z-index: -1;
-    padding: 22px;
-
-    &--none {
-      display: none;
-    }
-  }
-}
